# PeerCat-SDK-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: client.rs  error.rs  lib.rs  types.rs
tests/: error_scenarios_tests.rs  integration_tests.rs  schema_tests.rs
